fix: align search input placeholder in rtl locale

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -362,6 +362,14 @@
   }
 }
 
+[dir="rtl"] {
+  .users-circuits-navbar {
+    input {
+      padding: 7px 35px 7px 10px;
+    }
+  }
+}
+
 .users-circuits-navbar-buttons {
   align-items: center;
   column-gap: 10px;
